force-app/main/default/objects/Knowledge__kav/fields/Currency_in_dollars__c.field-meta.xml
<CustomField>
    <fullName>Currency_in_dollars__c</fullName>
    <label>Currency_in_dollars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>