force-app/main/default/objects/Knowledge__kav/fields/Customer_preference_Commerce_Sites_long1__c.field-meta.xml
<CustomField>
    <fullName>Customer_preference_Commerce_Sites_long1__c</fullName>
    <description>Customer preference Commerce Sites long</description>
    <inlineHelpText>Customer preference Commerce Sites long</inlineHelpText>
    <label>Customer preference Commerce Sites long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>