force-app/main/default/objects/Knowledge__kav/fields/Customer_preference_Commerce_Sites_long2__c.field-meta.xml
<CustomField>
    <fullName>Customer_preference_Commerce_Sites_long2__c</fullName>
    <description>Customer preference Commerce Sites long2</description>
    <inlineHelpText>Customer preference Commerce Sites long2</inlineHelpText>
    <label>Customer preference Commerce Sites long2</label>
    <type>TextArea</type>
</CustomField>