force-app/main/default/objects/Knowledge__kav/fields/data_time_with_long_digits__c.field-meta.xml
<CustomField>
    <fullName>data_time_with_long_digits__c</fullName>
    <label>data-time-with-long-digits</label>
    <type>DateTime</type>
</CustomField>