force-app/main/default/objects/Knowledge__kav/fields/date_field_with_alphanumeric_chars_1234a__c.field-meta.xml
<CustomField>
    <fullName>date_field_with_alphanumeric_chars_1234a__c</fullName>
    <label>date field with alphanumeric chars 1234a</label>
    <type>Date</type>
</CustomField>