force-app/main/default/objects/Knowledge__kav/fields/date_time_field_in_knowledge_entity_1234__c.field-meta.xml
<CustomField>
    <fullName>date_time_field_in_knowledge_entity_1234__c</fullName>
    <label>date_time_field_in_knowledge_entity_1234</label>
    <type>DateTime</type>
</CustomField>