force-app/main/default/objects/Knowledge__kav/fields/Detail2__c.field-meta.xml
<CustomField>
    <fullName>Detail2__c</fullName>
    <label>Detail2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>