force-app/main/default/objects/Knowledge__kav/fields/Detail_3__c.field-meta.xml
<CustomField>
    <fullName>Detail_3__c</fullName>
    <label>Detail 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>