force-app/main/default/objects/Knowledge__kav/fields/Email_field_type__c.field-meta.xml
<CustomField>
    <fullName>Email_field_type__c</fullName>
    <label>Email field type</label>
    <type>Email</type>
</CustomField>