force-app/main/default/objects/Knowledge__kav/fields/field_with_a_very_long_name_test_home_1__c.field-meta.xml
<CustomField>
    <fullName>field_with_a_very_long_name_test_home_1__c</fullName>
    <description>field_with_a_very_long_name_test_home_1</description>
    <inlineHelpText>field_with_a_very_long_name_test_home_1</inlineHelpText>
    <label>field_with_a_very_long_name_test_home_1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>