force-app/main/default/objects/Knowledge__kav/fields/formula_field_with_long_name_calculated__c.field-meta.xml
<CustomField>
    <fullName>formula_field_with_long_name_calculated__c</fullName>
    <formula>Title &amp; &quot; &quot; &amp; Summary</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula-field-with-long-name-calculated</label>
    <type>Text</type>
</CustomField>