force-app/main/default/objects/Knowledge__kav/fields/i_am_a_checbox_field_in_knowledge_kav__c.field-meta.xml
<CustomField>
    <fullName>i_am_a_checbox_field_in_knowledge_kav__c</fullName>
    <defaultValue>false</defaultValue>
    <label>i_am_a_checbox__field_in___knowledge_kav</label>
    <type>Checkbox</type>
</CustomField>