force-app/main/default/objects/Knowledge__kav/fields/i_am_a_file_field_in_knowledge_kav_enti__c.field-meta.xml
<CustomField>
    <fullName>i_am_a_file_field_in_knowledge_kav_enti__c</fullName>
    <description>i_am_a_file_field_in_knowledge_kav--entity full name</description>
    <inlineHelpText>i_am_a_file_field_in_knowledge_kav--entity</inlineHelpText>
    <label>i_am_a_file_field_in_knowledge-kav--enti</label>
    <type>File</type>
</CustomField>