force-app/main/default/objects/Knowledge__kav/fields/i_am_a_lookup_relationship_field_in_know__c.field-meta.xml
<CustomField>
    <fullName>i_am_a_lookup_relationship_field_in_know__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>i_am_a_lookup_relationship_field_in_know</label>
    <referenceTo>SocialPost</referenceTo>
    <relationshipLabel>Social Post</relationshipLabel>
    <relationshipName>socialpost</relationshipName>
    <type>Lookup</type>
</CustomField>