force-app/main/default/objects/Knowledge__kav/fields/ma_a_new_date_field__c.field-meta.xml
<CustomField>
    <fullName>ma_a_new_date_field__c</fullName>
    <label>ma a new date field</label>
    <type>Date</type>
</CustomField>