force-app/main/default/objects/Knowledge__kav/fields/multi_value_picklist_field_with_a_few_va__c.field-meta.xml
<CustomField>
    <fullName>multi_value_picklist_field_with_a_few_va__c</fullName>
    <label>multi-value picklist field with a few va</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>until</fullName>
            </value>
            <value>
                <fullName>your</fullName>
            </value>
            <value>
                <fullName>good</fullName>
            </value>
            <value>
                <fullName>is</fullName>
            </value>
            <value>
                <fullName>and</fullName>
            </value>
            <value>
                <fullName>better</fullName>
            </value>
            <value>
                <fullName>best</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>