force-app/main/default/objects/Knowledge__kav/fields/MYFIELDONE__c.field-meta.xml
<CustomField>
    <fullName>MYFIELDONE__c</fullName>
    <label>MYFIELDONE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>