force-app/main/default/objects/Knowledge__kav/fields/Number_field_type__c.field-meta.xml
<CustomField>
    <fullName>Number_field_type__c</fullName>
    <label>Number field type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>