force-app/main/default/objects/Knowledge__kav/fields/Percent_field_type__c.field-meta.xml
<CustomField>
    <fullName>Percent_field_type__c</fullName>
    <label>Percent field type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>