force-app/main/default/objects/Knowledge__kav/fields/phone_field_type_12345678_12345678_12345__c.field-meta.xml
<CustomField>
    <fullName>phone_field_type_12345678_12345678_12345__c</fullName>
    <label>phone field type 12345678 12345678 12345</label>
    <type>Phone</type>
</CustomField>