force-app/main/default/objects/Knowledge__kav/fields/picklist_field_type_with_a_few_variation__c.field-meta.xml
<CustomField>
    <fullName>picklist_field_type_with_a_few_variation__c</fullName>
    <label>picklist field type with a few variation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>good</fullName>
            </value>
            <value>
                <fullName>better</fullName>
            </value>
            <value>
                <fullName>best</fullName>
            </value>
            <value>
                <fullName>never</fullName>
            </value>
            <value>
                <fullName>try</fullName>
            </value>
            <value>
                <fullName>to</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>