force-app/main/default/objects/Knowledge__kav/fields/picklist_field_with_1234_alphanumeric_ch__c.field-meta.xml
<CustomField>
    <fullName>picklist_field_with_1234_alphanumeric_ch__c</fullName>
    <label>picklist field with 1234 alphanumeric ch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>Best</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>