force-app/main/default/objects/Knowledge__kav/fields/picklist_field_with_multiple_value__c.field-meta.xml
<CustomField>
    <fullName>picklist_field_with_multiple_value__c</fullName>
    <description>name: picklist---field...with()multiple::value - 
dev name: picklist_field_with__multiple_value</description>
    <inlineHelpText>name: picklist---field...with()multiple::value - 
dev name: picklist_field_with__multiple_value</inlineHelpText>
    <label>picklist---field...with()multiple::value</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
            <value>
                <fullName>test3</fullName>
            </value>
            <value>
                <fullName>tes4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>