force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>