force-app/main/default/objects/Knowledge__kav/fields/test_email_field_with_atRate__c.field-meta.xml
<CustomField>
    <fullName>test_email_field_with_atRate__c</fullName>
    <description>test_email_field_with_atRate</description>
    <inlineHelpText>test_email_field_with_atRate</inlineHelpText>
    <label>test-email-field-with@</label>
    <type>Email</type>
</CustomField>