force-app/main/default/objects/Knowledge__kav/fields/text_area_field_with_special_chars_inkno__c.field-meta.xml
<CustomField>
    <fullName>text_area_field_with_special_chars_inkno__c</fullName>
    <label>text area field with special chars __-in</label>
    <type>TextArea</type>
</CustomField>