force-app/main/default/objects/Knowledge__kav/fields/text_area_long_with_in_26_th_place_whata__c.field-meta.xml
<CustomField>
    <fullName>text_area_long_with_in_26_th_place_whata__c</fullName>
    <label>text area long with_in 26_th place whata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>