force-app/main/default/objects/Knowledge__kav/fields/text_area_rich_with_in_38th_place_wha_t__c.field-meta.xml
<CustomField>
    <fullName>text_area_rich_with_in_38th_place_wha_t__c</fullName>
    <label>text area rich with_in 38th place wha_t</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>