force-app/main/default/objects/Knowledge__kav/fields/text_field_with_37th_char_as_in_kn_owl__c.field-meta.xml
<CustomField>
    <fullName>text_field_with_37th_char_as_in_kn_owl__c</fullName>
    <label>text field with 37th char as _ in kn_owl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>