force-app/main/default/objects/Knowledge__kav/fields/text_field_with_exactly_37_charact__c.field-meta.xml
<CustomField>
    <fullName>text_field_with_exactly_37_charact__c</fullName>
    <label>text field with exactly 37 charact</label>
    <type>TextArea</type>
</CustomField>