force-app/main/default/objects/Knowledge__kav/fields/text_field_with_in26_an_d_37th_pos_iti__c.field-meta.xml
<CustomField>
    <fullName>text_field_with_in26_an_d_37th_pos_iti__c</fullName>
    <label>text field with _ in26 an d 37th pos iti</label>
    <type>TextArea</type>
</CustomField>