force-app/main/default/objects/Knowledge__kav/fields/text_field_with_in_27_an_d_38th_pos_it__c.field-meta.xml
<CustomField>
    <fullName>text_field_with_in_27_an_d_38th_pos_it__c</fullName>
    <label>text field with _ in 27 an d 38th pos it</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>