force-app/main/default/objects/Knowledge__kav/fields/text_value_field_with_s_p_e_c_i_a_l_c_hh__c.field-meta.xml
<CustomField>
    <fullName>text_value_field_with_s_p_e_c_i_a_l_c_hh__c</fullName>
    <description>label: text(value)--field--=with__special*&amp;^cha
devname: text_value_field_with_s_p_e_c_i_a_l_c_h_a</description>
    <label>text(value)--field--=with__special*&amp;^cha</label>
    <type>TextArea</type>
</CustomField>