force-app/main/default/objects/Knowledge__kav/fields/text_value_field_with_special_cha__c.field-meta.xml
<CustomField>
    <fullName>text_value_field_with_special_cha__c</fullName>
    <description>text(value)--field--=with__special*&amp;^cha</description>
    <inlineHelpText>text(value)--field--=with__special*&amp;^cha</inlineHelpText>
    <label>text(value)--field--=with__special*&amp;^cha</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>