force-app/main/default/objects/Knowledge__kav/fields/this_is_a_number_field_in_knowledge_123__c.field-meta.xml
<CustomField>
    <fullName>this_is_a_number_field_in_knowledge_123__c</fullName>
    <label>this is a number field in knowledge _123</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>