force-app/main/default/objects/Knowledge__kav/fields/this_is_a_percent_field_in_knowledge_123__c.field-meta.xml
<CustomField>
    <fullName>this_is_a_percent_field_in_knowledge_123__c</fullName>
    <label>this is a percent field in knowledge 123</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>