force-app/main/default/objects/Knowledge__kav/fields/Title2__c.field-meta.xml
<CustomField>
    <fullName>Title2__c</fullName>
    <label>Title2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>