force-app/main/default/objects/Knowledge__kav/fields/Title_3__c.field-meta.xml
<CustomField>
    <fullName>Title_3__c</fullName>
    <label>Title 3</label>
    <type>TextArea</type>
</CustomField>