force-app/main/default/objects/Knowledge__kav/fields/url_field_with_max_field_length_name_and__c.field-meta.xml
<CustomField>
    <fullName>url_field_with_max_field_length_name_and__c</fullName>
    <label>url field with max field length name and</label>
    <type>Url</type>
</CustomField>