force-app/main/default/objects/Knowledge__kav/fields/X234_phone_field_in_with_a_in_27th_plac__c.field-meta.xml
<CustomField>
    <fullName>X234_phone_field_in_with_a_in_27th_plac__c</fullName>
    <label>X234 phone field in with a_ in 27th plac</label>
    <type>Phone</type>
</CustomField>